syntax = "proto3";
package pocket.application;

option go_package = "github.com/pokt-network/poktroll/x/application/types";
option (gogoproto.stable_marshaler_all) = true;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

import "pocket/shared/service.proto";
import "pocket/application/types.proto";

enum ApplicationUnbondingReason {
  APPLICATION_UNBONDING_REASON_ELECTIVE = 0;
  APPLICATION_UNBONDING_REASON_BELOW_MIN_STAKE = 1;
  APPLICATION_UNBONDING_REASON_MIGRATION = 2;
}

// EventApplicationStaked is emitted when an application is staked or up-staked.
message EventApplicationStaked {
  // Next index: 5

  // pocket.application.Application application = 1 [(gogoproto.jsontag) = "application"];
  reserved 1;
  
  // The end height of the session in which the application was staked.
  int64 session_end_height = 2 [(gogoproto.jsontag) = "session_end_height"];
  // The address of the application that was staked.
  string application_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // The amount of stake.
  string stake = 4 [(gogoproto.jsontag) = "stake"];
}

// EventRedelegation is an event emitted whenever an application changes its
// delegatee gateways on chain. This is in response to both a DelegateToGateway
// and UndelegateFromGateway message.
message EventRedelegation {
  // Next index: 4

  // pocket.application.Application application = 1 [(gogoproto.jsontag) = "application"];
  reserved 1;
  
  // The end height of the session in which the redelegation was committed.
  int64 session_end_height = 2 [(gogoproto.jsontag) = "session_end_height"];
  // The address of the application that was redelegated.
  string application_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventTransferBegin is emitted whenever an application begins a transfer. It
// includes the source application state immediately after the transfer began.
message EventTransferBegin {
  // Next index: 6

  // pocket.application.Application source_application = 3;
  reserved 3;

  string source_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string destination_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // The end height of the session in which the transfer began.
  int64 session_end_height = 4 [(gogoproto.jsontag) = "session_end_height"];
  // The height at which the transfer will complete.
  int64 transfer_end_height = 5 [(gogoproto.jsontag) = "transfer_end_height"];
}

// EventTransferEnd is emitted whenever an application transfer is completed. It
// includes the destination application state at the time the transfer completed.
// Either EventTransferEnd or EventTransferError will be emitted corresponding to
// any given EventTransferBegin event.
message EventTransferEnd {
  // Next index: 6

  // pocket.application.Application destination_application = 3;
  reserved 3;

  string source_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string destination_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // The end height of the session in which the transfer ended.
  int64 session_end_height = 4 [(gogoproto.jsontag) = "session_end_height"];
  // The height at which the transfer completed.
  int64 transfer_end_height = 5 [(gogoproto.jsontag) = "transfer_end_height"];
}

// EventTransferError is emitted whenever an application transfer fails. It
// includes the source application state at the time the transfer failed and
// the error message.
// Either EventTransferEnd or EventTransferError will be emitted corresponding to
// any given EventTransferBegin event.
message EventTransferError {
  // Next index: 6

  // pocket.application.Application source_application = 3;
  reserved 3;

  string source_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string destination_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // The end height of the session in which the transfer failed.
  int64 session_end_height = 4 [(gogoproto.jsontag) = "session_end_height"];
  string error = 5;
  // The amount of stake that failed to transfer.
  string stake = 6 [(gogoproto.jsontag) = "stake"];
}

// EventApplicationUnbondingBegin is emitted when an application begins unbonding.
// This can be triggered by the commitment of an unstake message or by the application's
// stake dropping below the minimum. This event signals that an application has begun
// unbonding. The unbonding period is determined by the shared param,
// application_unbonding_period_sessions.
message EventApplicationUnbondingBegin {
  // Next index: 6

  // pocket.application.Application application = 1 [(gogoproto.jsontag) = "application"];
  reserved 1;
  
  ApplicationUnbondingReason reason = 2 [(gogoproto.jsontag) = "reason"];
  // The end height of the session in which the unbonding began.
  int64 session_end_height = 3 [(gogoproto.jsontag) = "session_end_height"];
  // The height at which application unbonding will end.
  int64 unbonding_end_height = 4 [(gogoproto.jsontag) = "unbonding_height"];
  // The address of the application that began unbonding.
  string application_address = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventApplicationUnbondingEnd is emitted when an application has completed
// unbonding. The unbonding period is determined by the shared param,
// application_unbonding_period_sessions.
message EventApplicationUnbondingEnd {
  // Next index: 6

  // pocket.application.Application application = 1 [(gogoproto.jsontag) = "application"];
  reserved 1;
  
  ApplicationUnbondingReason reason = 2 [(gogoproto.jsontag) = "reason"];
  // The end height of the session in which the unbonding ended.
  int64 session_end_height = 3 [(gogoproto.jsontag) = "session_end_height"];
  // The height at which application unbonding ended.
  int64 unbonding_end_height = 4 [(gogoproto.jsontag) = "unbonding_height"];
  // The address of the application that completed unbonding.
  string application_address = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventApplicationUnbondingCanceled is emitted when an application which was unbonding
// successfully (re-)stakes before the unbonding period has elapsed. An EventApplicationStaked
// event will also be emitted immediately after this event.
message EventApplicationUnbondingCanceled {
  // Next index: 4

  // pocket.application.Application application = 1 [(gogoproto.jsontag) = "application"];
  reserved 1;
  
  // The end height of the session in which the unbonding was canceled.
  int64 session_end_height = 2 [(gogoproto.jsontag) = "session_end_height"];
  // The address of the application that canceled unbonding.
  string application_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
